# ai-fullstack-challenge

./: .env.example  .gitignore  GUIA_EXECUCAO.md  Makefile  README.md  collection.json  docker-compose.yml  start-stack.ps1  stop-stack.ps1
DOCS/: 00_README_FULLSTACK.md  01_PRODUCT_VISION.md  (+36 more)
backend/: .dockerignore  Dockerfile  gunicorn.conf.py  pyproject.toml  requirements-ai.txt  requirements.txt  run.py  seed.py
backend/app/: __init__.py  config.py  env_loader.py  errors.py  extensions.py  models.py  repositories.py  request_id.py  security.py
backend/app/routes/: attachments.py  books.py  chat.py  health.py  openapi.py  semantic_search.py
backend/app/services/: book_import.py  books.py  chat.py  observability.py  seed.py  semantic_search.py  uploads.py
backend/app/utils/: http.py
backend/migrations/: env.py
backend/migrations/versions/: a717bfa93184_baseline_schema.py
backend/tests/: __init__.py  conftest.py  test_api_key_auth.py  test_app_factory.py  test_attachments_api.py  test_book_aware_chat.py  test_book_import_extraction.py  test_books_api.py  test_chat_api.py  test_chat_context.py  test_chat_service_internals.py  test_config.py  test_delete_session.py  test_env_loader.py  test_error_handling.py  test_feedback_resilience.py  test_gateway_selection.py  test_hashing_embeddings.py  test_health.py  test_models.py  test_observability.py  test_openapi_contract.py  test_pagination.py  test_pdf_extraction.py  test_pin_session.py  test_rate_limiting.py  test_request_id.py  test_seed.py  test_semantic_search_api.py  test_upload_service.py
(+54 files in other folders)
