[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindsight-ai-backend"
version = "0.1.0"
description = "MindSight AI — Flask Backend"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1",
    "flask-cors>=6.0",
    "flask-sqlalchemy>=3.1",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "marshmallow>=4.0",
    "langsmith>=0.3",
]

[project.optional-dependencies]
ai = [
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-community>=0.3",
    "openai>=1.60",
    "faiss-cpu>=1.9",
    "sentence-transformers>=3.4",
]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.15",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 85
